--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,6 +43,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Go Security
         uses: securego/gosec@master
+        with:
+          # exclude "G108: Profiling endpoint is automatically exposed" because we are exposing on an internal port
+          args: -exclude=G108 ./...
   malware_security_scan:
     name: Malware Scanner
     runs-on: ubuntu-latest
