--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,7 +5,6 @@
 
 # These are the default owners for the code and will
 # be requested for review when someone opens a pull request.
-# order is alphabetical for easier maintenance.
 #
 # Michael Edegware (medegw01)
 # Sean Gallacher (gallacher)
@@ -15,8 +14,10 @@
 # Aaron Tye (atye)
 # Florian Coulombel (coulof)
 # Shayna Finocchiaro (shaynafinocchiaro)
-# Logan Jones (lj-software)
 # Sharmila Ramamoorthy (sharmilarama)
+# Evgeny Uglov (EvgenyUglov)
+# Bowen Jiang (bjiang27)
+
 
 # for all files:
-* @medegw01 @gallacher @tdawe @alikdell @atye @hoppea2 @coulof @shaynafinocchiaro @lj-software @sharmilarama
+* @medegw01 @gallacher @tdawe @alikdell @atye @hoppea2 @coulof @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27
