Update code owners list

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -79,3 +79,5 @@ jobs:
         with:
           image-name: csm-metrics-powerstore
           severity-threshold: HIGH
+        env:
+          DOCKLE_HOST: "unix:///var/run/docker.sock"
