--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -24,5 +24,4 @@
 
 
 # for all files:
-* @gallacher @tdawe @alikdell @atye @hoppea2 @coulof @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27
-* @taohe1012 @P-Cao @baoy1 @YianZong @forrestxia
+* @gallacher @tdawe @alikdell @atye @hoppea2 @coulof @shaynafinocchiaro @sharmilarama @EvgenyUglov @bjiang27 @taohe1012 @P-Cao @baoy1 @YianZong @forrestxia
