--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -73,7 +73,12 @@ jobs:
       - name: Get dependencies
         run:  go mod download
       - name: Build csm-metrics-powerstore Docker Image
-        run: make clean build docker  
+        run: |
+         chmod +x ./scripts/build_ubi_micro.sh
+         make build-base-image
+         podman build -t docker.io/csm-metrics-powerstore -f ./Dockerfile --build-arg GOIMAGE=golang:latest --build-arg BASEIMAGE="localhost/mpst-ubimicro"
+         podman save docker.io/library/csm-metrics-powerstore -o /tmp/csm-metrics-powerstore.tar
+         docker load -i /tmp/csm-metrics-powerstore.tar
       - name: Run Trivy action
         uses: aquasecurity/trivy-action@master
         with:
