--- a/.github/workflows/auto-release.yaml
+++ b/.github/workflows/auto-release.yaml
@@ -9,5 +9,5 @@ jobs:
     uses: dell/common-github-actions/.github/workflows/csm-release-driver-module.yaml@main
     with:
       version: "minor"
-      image: "csm-metrics-powerstore"
+      images: "csm-metrics-powerstore"
     secrets: inherit
